Update NLP 8CSE-D Word Negation Tracking.ipynb

--- a/NLP 8CSE-D Word Negation Tracking.ipynb
+++ b/NLP 8CSE-D Word Negation Tracking.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentence = \"I was not happy with the team's performance\""
+    "sentence = \"i am really sad about my job , i dont about capgemini will send me joining latter or not \""
    ]
   },
   {
